# budgie-cpupower-applet

./: .gitignore  Makefile.am  README.md  configure.ac
applet/: CpuPower.plugin  Makefile.am  cpupower.py
cpufreqctl/: Makefile.am  cpufreqctl  cpufreqctl.c
cpufreqctl/polkit/actions/: rf.cpupower.policy
cpufreqctl/polkit/rules.d/: rf.cpupower.rules
schemas/: Makefile.am  com.solus-project.budgie-cpupower-applet.gschema.xml
